[package]
name = "phil_opp_rust_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# `cargo bootimage` doesn't work with most recent 11.7
# TODO follow migration guide:
#   https://github.com/rust-osdev/bootloader/blob/b394598ddface754dbb3866c7e1498d9b4a41c95/docs/migration/v0.9.md
bootloader = "0.9"
