[package]
name = "phil_opp_rust_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# `cargo bootimage` doesn't work with most recent 11.7
# TODO follow migration guide:
#   https://github.com/rust-osdev/bootloader/blob/b394598ddface754dbb3866c7e1498d9b4a41c95/docs/migration/v0.9.md
bootloader = "0.9"
# Note: tutorial uses 0.5.2
# Use spinlock since our kernel doesn't have support for Mutexes
spin = "0.9.8"
# TODO newer versions may not be compatible with OS vga text post
volatile = "0.2.6"
# Note: tutorial uses 0.14.2
x86_64 = "0.15.1"
# Note: tutorial uses 0.2.0
uart_16550 = "0.3.0"
# See https://wiki.osdev.org/8259_PIC
# TODO replace with APIC
# Note: Tutorial uses 0.10.1
pic8259 = "0.11.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
# Specify debug device for testing on guest, as well as IO port parameters
# Port 0xf4 is generally unused on x86, see https://wiki.osdev.org/I/O_Ports#The_list
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"]
# When a value is written to the port, QEMU will exit with `(value << 1) | 1`
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300          # seconds


[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false